--- a/EDA_12_market.ipynb
+++ b/EDA_12_market.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:50.193126Z",
-     "start_time": "2025-07-16T01:43:49.771757Z"
+     "end_time": "2025-07-16T03:03:56.173819Z",
+     "start_time": "2025-07-16T03:03:56.166233Z"
     }
    },
    "source": [
@@ -19,29 +19,29 @@
     "from sklearn.decomposition import PCA"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:51.249212Z",
-     "start_time": "2025-07-16T01:43:50.202663Z"
+     "end_time": "2025-07-16T03:03:57.704100Z",
+     "start_time": "2025-07-16T03:03:56.213958Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 데이터 불러오기\n",
-    "marketing = pd.read_csv('thisfile/marketing_advanced.csv', encoding='cp949')"
+    "marketing = pd.read_csv('marketing_advanced.csv', encoding='cp949')"
    ],
    "id": "3fdc80ad7976e348",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:51.267280Z",
-     "start_time": "2025-07-16T01:43:51.258747Z"
+     "end_time": "2025-07-16T03:03:57.725585Z",
+     "start_time": "2025-07-16T03:03:57.715691Z"
     }
    },
    "cell_type": "code",
@@ -62,13 +62,13 @@
    ],
    "id": "e30028da6cef635a",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:51.284001Z",
-     "start_time": "2025-07-16T01:43:51.277928Z"
+     "end_time": "2025-07-16T03:03:57.762482Z",
+     "start_time": "2025-07-16T03:03:57.753259Z"
     }
    },
    "cell_type": "code",
@@ -79,13 +79,13 @@
    ],
    "id": "ba54b9fad5397a54",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:52.097078Z",
-     "start_time": "2025-07-16T01:43:51.293600Z"
+     "end_time": "2025-07-16T03:03:58.881501Z",
+     "start_time": "2025-07-16T03:03:57.781414Z"
     }
    },
    "cell_type": "code",
@@ -182,13 +182,13 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:52.294Z",
-     "start_time": "2025-07-16T01:43:52.114140Z"
+     "end_time": "2025-07-16T03:03:59.331329Z",
+     "start_time": "2025-07-16T03:03:58.977757Z"
     }
    },
    "cell_type": "code",
@@ -205,13 +205,13 @@
    ],
    "id": "420473b37f9292ce",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:52.796628Z",
-     "start_time": "2025-07-16T01:43:52.305532Z"
+     "end_time": "2025-07-16T03:04:00.333480Z",
+     "start_time": "2025-07-16T03:03:59.346464Z"
     }
    },
    "cell_type": "code",
@@ -308,13 +308,13 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:53.042667Z",
-     "start_time": "2025-07-16T01:43:52.817391Z"
+     "end_time": "2025-07-16T03:04:00.836441Z",
+     "start_time": "2025-07-16T03:04:00.370749Z"
     }
    },
    "cell_type": "code",
@@ -423,13 +423,13 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:53.317848Z",
-     "start_time": "2025-07-16T01:43:53.069067Z"
+     "end_time": "2025-07-16T03:04:01.114834Z",
+     "start_time": "2025-07-16T03:04:00.858414Z"
     }
    },
    "cell_type": "code",
@@ -542,13 +542,13 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:53.351297Z",
-     "start_time": "2025-07-16T01:43:53.334997Z"
+     "end_time": "2025-07-16T03:04:01.232780Z",
+     "start_time": "2025-07-16T03:04:01.212466Z"
     }
    },
    "cell_type": "code",
@@ -574,13 +574,13 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:53.400548Z",
-     "start_time": "2025-07-16T01:43:53.381222Z"
+     "end_time": "2025-07-16T03:04:01.333219Z",
+     "start_time": "2025-07-16T03:04:01.312374Z"
     }
    },
    "cell_type": "code",
@@ -609,13 +609,13 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:43:53.997438Z",
-     "start_time": "2025-07-16T01:43:53.462729Z"
+     "end_time": "2025-07-16T03:04:02.339906Z",
+     "start_time": "2025-07-16T03:04:01.394508Z"
     }
    },
    "cell_type": "code",
@@ -718,13 +718,13 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:48:08.411981Z",
-     "start_time": "2025-07-16T01:48:07.759013Z"
+     "end_time": "2025-07-16T03:04:03.346075Z",
+     "start_time": "2025-07-16T03:04:02.422904Z"
     }
    },
    "cell_type": "code",
@@ -826,13 +826,13 @@
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T01:48:28.653857Z",
-     "start_time": "2025-07-16T01:48:28.059877Z"
+     "end_time": "2025-07-16T03:04:04.186435Z",
+     "start_time": "2025-07-16T03:04:03.431400Z"
     }
    },
    "cell_type": "code",
@@ -933,15 +933,59 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 20
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-16T03:04:04.338488Z",
+     "start_time": "2025-07-16T03:04:04.248202Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "d96971395796d266"
+   "source": "marketing_delivered.info()",
+   "id": "d96971395796d266",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 102616 entries, 0 to 104898\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                         Non-Null Count   Dtype         \n",
+      "---  ------                         --------------   -----         \n",
+      " 0   order_id                       102616 non-null  object        \n",
+      " 1   customer_id                    102616 non-null  object        \n",
+      " 2   order_status                   102616 non-null  object        \n",
+      " 3   order_purchase_timestamp       102616 non-null  datetime64[ns]\n",
+      " 4   order_approved_at              102616 non-null  datetime64[ns]\n",
+      " 5   order_delivered_timestamp      102616 non-null  datetime64[ns]\n",
+      " 6   order_estimated_delivery_date  102616 non-null  datetime64[ns]\n",
+      " 7   age                            102616 non-null  int64         \n",
+      " 8   gender                         102616 non-null  object        \n",
+      " 9   country                        102616 non-null  object        \n",
+      " 10  payment_type                   102616 non-null  object        \n",
+      " 11  payment_installments           102616 non-null  int64         \n",
+      " 12  seller_id                      102616 non-null  object        \n",
+      " 13  shipping_charges               102616 non-null  int64         \n",
+      " 14  category1                      102616 non-null  object        \n",
+      " 15  category2                      102616 non-null  object        \n",
+      " 16  price                          102616 non-null  float64       \n",
+      " 17  delivery_delay_days            102616 non-null  float64       \n",
+      " 18  approval_delay_minutes         102616 non-null  float64       \n",
+      " 19  weight_kg                      102616 non-null  int64         \n",
+      " 20  volume_cm3                     102616 non-null  float64       \n",
+      " 21  review_score                   102616 non-null  int64         \n",
+      " 22  marketing_info_agree           102616 non-null  object        \n",
+      " 23  agegroup                       102616 non-null  object        \n",
+      " 24  product_id                     102616 non-null  object        \n",
+      "dtypes: datetime64[ns](4), float64(4), int64(5), object(12)\n",
+      "memory usage: 20.4+ MB\n"
+     ]
+    }
+   ],
+   "execution_count": 21
   }
  ],
  "metadata": {
