--- a/EDA_12_market.ipynb
+++ b/EDA_12_market.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 10,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:03:56.173819Z",
-     "start_time": "2025-07-16T03:03:56.166233Z"
-    }
+     "end_time": "2025-07-16T01:43:50.193126Z",
+     "start_time": "2025-07-16T01:43:49.771757Z"
+    },
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -17,34 +19,35 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA"
-   ],
-   "outputs": [],
-   "execution_count": 7
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3fdc80ad7976e348",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:03:57.704100Z",
-     "start_time": "2025-07-16T03:03:56.213958Z"
+     "end_time": "2025-07-16T01:43:51.249212Z",
+     "start_time": "2025-07-16T01:43:50.202663Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# 데이터 불러오기\n",
     "marketing = pd.read_csv('marketing_advanced.csv', encoding='cp949')"
-   ],
-   "id": "3fdc80ad7976e348",
-   "outputs": [],
-   "execution_count": 8
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e30028da6cef635a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:03:57.725585Z",
-     "start_time": "2025-07-16T03:03:57.715691Z"
+     "end_time": "2025-07-16T01:43:51.267280Z",
+     "start_time": "2025-07-16T01:43:51.258747Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "def check_df(dataframe, head=5):\n",
     "    pd.set_option('display.max_columns', None)\n",
@@ -59,38 +62,35 @@
     "    print(dataframe.isnull().sum())\n",
     "    print(\"##################### Head #####################\")\n",
     "    print(dataframe.head(head))"
-   ],
-   "id": "e30028da6cef635a",
-   "outputs": [],
-   "execution_count": 9
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ba54b9fad5397a54",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:03:57.762482Z",
-     "start_time": "2025-07-16T03:03:57.753259Z"
+     "end_time": "2025-07-16T01:43:51.284001Z",
+     "start_time": "2025-07-16T01:43:51.277928Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "def uni_df(dataframe):\n",
     "    for col in dataframe:\n",
     "        print(col,dataframe[col].unique())"
-   ],
-   "id": "ba54b9fad5397a54",
-   "outputs": [],
-   "execution_count": 10
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fa6d06aaa28e946b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:03:58.881501Z",
-     "start_time": "2025-07-16T03:03:57.781414Z"
+     "end_time": "2025-07-16T01:43:52.097078Z",
+     "start_time": "2025-07-16T01:43:51.293600Z"
     }
    },
-   "cell_type": "code",
-   "source": "check_df(marketing)",
-   "id": "fa6d06aaa28e946b",
    "outputs": [
     {
      "name": "stdout",
@@ -182,16 +182,21 @@
      ]
     }
    ],
-   "execution_count": 11
+   "source": [
+    "check_df(marketing)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "420473b37f9292ce",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:03:59.331329Z",
-     "start_time": "2025-07-16T03:03:58.977757Z"
+     "end_time": "2025-07-16T01:43:52.294Z",
+     "start_time": "2025-07-16T01:43:52.114140Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "# 날짜형으로 변환할 컬럼 목록\n",
     "date_cols = [\n",
@@ -202,21 +207,18 @@
     "]\n",
     "for col in date_cols:\n",
     "    marketing[col] = pd.to_datetime(marketing[col], errors='coerce')"
-   ],
-   "id": "420473b37f9292ce",
-   "outputs": [],
-   "execution_count": 12
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c4764cf764f26a5b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:04:00.333480Z",
-     "start_time": "2025-07-16T03:03:59.346464Z"
+     "end_time": "2025-07-16T01:43:52.796628Z",
+     "start_time": "2025-07-16T01:43:52.305532Z"
     }
    },
-   "cell_type": "code",
-   "source": "check_df(marketing)",
-   "id": "c4764cf764f26a5b",
    "outputs": [
     {
      "name": "stdout",
@@ -308,18 +310,20 @@
      ]
     }
    ],
-   "execution_count": 13
+   "source": [
+    "check_df(marketing)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d321b65630322203",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:04:00.836441Z",
-     "start_time": "2025-07-16T03:04:00.370749Z"
+     "end_time": "2025-07-16T01:43:53.042667Z",
+     "start_time": "2025-07-16T01:43:52.817391Z"
     }
    },
-   "cell_type": "code",
-   "source": "uni_df(marketing)",
-   "id": "d321b65630322203",
    "outputs": [
     {
      "name": "stdout",
@@ -423,22 +427,20 @@
      ]
     }
    ],
-   "execution_count": 14
+   "source": [
+    "uni_df(marketing)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "cc74b6bff943dbbd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:04:01.114834Z",
-     "start_time": "2025-07-16T03:04:00.858414Z"
+     "end_time": "2025-07-16T01:43:53.317848Z",
+     "start_time": "2025-07-16T01:43:53.069067Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "# 오타 수정\n",
-    "marketing['category2'] = marketing['category2'].replace('낚세', '낚시')\n",
-    "uni_df(marketing)"
-   ],
-   "id": "cc74b6bff943dbbd",
    "outputs": [
     {
      "name": "stdout",
@@ -542,21 +544,22 @@
      ]
     }
    ],
-   "execution_count": 15
+   "source": [
+    "# 오타 수정\n",
+    "marketing['category2'] = marketing['category2'].replace('낚세', '낚시')\n",
+    "uni_df(marketing)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8fee4a460bd46d19",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:04:01.232780Z",
-     "start_time": "2025-07-16T03:04:01.212466Z"
+     "end_time": "2025-07-16T01:43:53.351297Z",
+     "start_time": "2025-07-16T01:43:53.334997Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "# order_status별 결측치 확인\n",
-    "print(marketing['order_status'].value_counts())"
-   ],
-   "id": "8fee4a460bd46d19",
    "outputs": [
     {
      "name": "stdout",
@@ -574,24 +577,21 @@
      ]
     }
    ],
-   "execution_count": 16
+   "source": [
+    "# order_status별 결측치 확인\n",
+    "print(marketing['order_status'].value_counts())"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a92d2e923fbd458b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:04:01.333219Z",
-     "start_time": "2025-07-16T03:04:01.312374Z"
+     "end_time": "2025-07-16T01:43:53.400548Z",
+     "start_time": "2025-07-16T01:43:53.381222Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "# order_delivered_timestamp이 결측인 경우의 order_status 확인\n",
-    "print(marketing[marketing['order_delivered_timestamp'].isnull()]['order_status'].value_counts())\n",
-    "\n",
-    "# 배송이 되지 않은 고객들의 order_delivered_timestamp가 결측치 인것 을 확인 할수 있다. 그럼으로 타당한 결측치임으로 유지한다.\n",
-    "# canceled인데 order_delivered_timestamp있는 값과 delivered인데 order_delivered_timestamp 없는 값 확인 필요"
-   ],
-   "id": "a92d2e923fbd458b",
    "outputs": [
     {
      "name": "stdout",
@@ -609,24 +609,24 @@
      ]
     }
    ],
-   "execution_count": 17
+   "source": [
+    "# order_delivered_timestamp이 결측인 경우의 order_status 확인\n",
+    "print(marketing[marketing['order_delivered_timestamp'].isnull()]['order_status'].value_counts())\n",
+    "\n",
+    "# 배송이 되지 않은 고객들의 order_delivered_timestamp가 결측치 인것 을 확인 할수 있다. 그럼으로 타당한 결측치임으로 유지한다.\n",
+    "# canceled인데 order_delivered_timestamp있는 값과 delivered인데 order_delivered_timestamp 없는 값 확인 필요"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "611518b2b61e76f3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:04:02.339906Z",
-     "start_time": "2025-07-16T03:04:01.394508Z"
+     "end_time": "2025-07-16T01:43:53.997438Z",
+     "start_time": "2025-07-16T01:43:53.462729Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "# 실제 배송 완료된 고객만 approval_delay_minutes(결제승인까지 걸린 시간 (분 단위)) 결측값을 중앙값으로 대체\n",
-    "median_approval_delay = marketing[marketing['order_status'] == 'delivered']['approval_delay_minutes'].median()\n",
-    "marketing['approval_delay_minutes'].fillna(median_approval_delay, inplace=True)\n",
-    "# approval_delay_minutes 결측값이 사라짐\n",
-    "check_df(marketing)"
-   ],
-   "id": "611518b2b61e76f3",
    "outputs": [
     {
      "name": "stdout",
@@ -668,7 +668,26 @@
       "dtypes: datetime64[ns](4), float64(4), int64(5), object(12)\n",
       "memory usage: 20.0+ MB\n",
       "None\n",
-      "##################### Describe #####################\n",
+      "##################### Describe #####################\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/dh/v6wj1h7d7bg8nxdblyppcb5w0000gn/T/ipykernel_26961/348787432.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  marketing['approval_delay_minutes'].fillna(median_approval_delay, inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "                                order_id                       customer_id order_status       order_purchase_timestamp              order_approved_at      order_delivered_timestamp  order_estimated_delivery_date           age  gender country payment_type  payment_installments                         seller_id  shipping_charges category1 category2          price  delivery_delay_days  approval_delay_minutes      weight_kg     volume_cm3   review_score marketing_info_agree agegroup        product_id\n",
       "count                             104899                            104899       104899                         104899                         104899                         102623                         104899  104899.00000  104899  104899       104899         104899.000000                            104899     104899.000000    104899    104899  104899.000000        102623.000000           104899.000000  104899.000000  104899.000000  104899.000000               104899   104899            104899\n",
       "unique                             98665                             95419            7                            NaN                            NaN                            NaN                            NaN           NaN       2      28            4                   NaN                              3095               NaN         6        37            NaN                  NaN                     NaN            NaN            NaN            NaN                    2        5                37\n",
@@ -718,23 +737,24 @@
      ]
     }
    ],
-   "execution_count": 18
+   "source": [
+    "# 실제 배송 완료된 고객만 approval_delay_minutes(결제승인까지 걸린 시간 (분 단위)) 결측값을 중앙값으로 대체\n",
+    "median_approval_delay = marketing[marketing['order_status'] == 'delivered']['approval_delay_minutes'].median()\n",
+    "marketing['approval_delay_minutes'].fillna(median_approval_delay, inplace=True)\n",
+    "# approval_delay_minutes 결측값이 사라짐\n",
+    "check_df(marketing)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ee2c61a67ec65b4f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:04:03.346075Z",
-     "start_time": "2025-07-16T03:04:02.422904Z"
+     "end_time": "2025-07-16T01:48:08.411981Z",
+     "start_time": "2025-07-16T01:48:07.759013Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "# delivered인데 order_delivered_timestamp 없는 값 확인 필요\n",
-    "marketing_delivered = marketing[marketing['order_status'] == 'delivered'].copy()\n",
-    "# 배송 완료된 고객중 order_delivered_timestamp(배송 완료시간) 결측값 확인\n",
-    "check_df(marketing_delivered)"
-   ],
-   "id": "ee2c61a67ec65b4f",
    "outputs": [
     {
      "name": "stdout",
@@ -826,22 +846,23 @@
      ]
     }
    ],
-   "execution_count": 19
+   "source": [
+    "# delivered인데 order_delivered_timestamp 없는 값 확인 필요\n",
+    "marketing_delivered = marketing[marketing['order_status'] == 'delivered'].copy()\n",
+    "# 배송 완료된 고객중 order_delivered_timestamp(배송 완료시간) 결측값 확인\n",
+    "check_df(marketing_delivered)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2c307523880f5155",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-16T03:04:04.186435Z",
-     "start_time": "2025-07-16T03:04:03.431400Z"
+     "end_time": "2025-07-16T01:48:28.653857Z",
+     "start_time": "2025-07-16T01:48:28.059877Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "marketing_delivered = marketing_delivered[marketing_delivered['order_delivered_timestamp'].notnull()].copy()\n",
-    "# delivery_delay_days가 Null인 항목은 order_delivered_timestamp을 알수 없음으로 결측치 제거\n",
-    "check_df(marketing_delivered)"
-   ],
-   "id": "2c307523880f5155",
    "outputs": [
     {
      "name": "stdout",
@@ -933,59 +954,21 @@
      ]
     }
    ],
-   "execution_count": 20
+   "source": [
+    "marketing_delivered = marketing_delivered[marketing_delivered['order_delivered_timestamp'].notnull()].copy()\n",
+    "# delivery_delay_days가 Null인 항목은 order_delivered_timestamp을 알수 없음으로 결측치 제거\n",
+    "check_df(marketing_delivered)"
+   ]
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-16T03:04:04.338488Z",
-     "start_time": "2025-07-16T03:04:04.248202Z"
-    }
-   },
    "cell_type": "code",
-   "source": "marketing_delivered.info()",
+   "execution_count": null,
    "id": "d96971395796d266",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 102616 entries, 0 to 104898\n",
-      "Data columns (total 25 columns):\n",
-      " #   Column                         Non-Null Count   Dtype         \n",
-      "---  ------                         --------------   -----         \n",
-      " 0   order_id                       102616 non-null  object        \n",
-      " 1   customer_id                    102616 non-null  object        \n",
-      " 2   order_status                   102616 non-null  object        \n",
-      " 3   order_purchase_timestamp       102616 non-null  datetime64[ns]\n",
-      " 4   order_approved_at              102616 non-null  datetime64[ns]\n",
-      " 5   order_delivered_timestamp      102616 non-null  datetime64[ns]\n",
-      " 6   order_estimated_delivery_date  102616 non-null  datetime64[ns]\n",
-      " 7   age                            102616 non-null  int64         \n",
-      " 8   gender                         102616 non-null  object        \n",
-      " 9   country                        102616 non-null  object        \n",
-      " 10  payment_type                   102616 non-null  object        \n",
-      " 11  payment_installments           102616 non-null  int64         \n",
-      " 12  seller_id                      102616 non-null  object        \n",
-      " 13  shipping_charges               102616 non-null  int64         \n",
-      " 14  category1                      102616 non-null  object        \n",
-      " 15  category2                      102616 non-null  object        \n",
-      " 16  price                          102616 non-null  float64       \n",
-      " 17  delivery_delay_days            102616 non-null  float64       \n",
-      " 18  approval_delay_minutes         102616 non-null  float64       \n",
-      " 19  weight_kg                      102616 non-null  int64         \n",
-      " 20  volume_cm3                     102616 non-null  float64       \n",
-      " 21  review_score                   102616 non-null  int64         \n",
-      " 22  marketing_info_agree           102616 non-null  object        \n",
-      " 23  agegroup                       102616 non-null  object        \n",
-      " 24  product_id                     102616 non-null  object        \n",
-      "dtypes: datetime64[ns](4), float64(4), int64(5), object(12)\n",
-      "memory usage: 20.4+ MB\n"
-     ]
-    }
-   ],
-   "execution_count": 21
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marketing_delivered"
+   ]
   }
  ],
  "metadata": {
@@ -997,14 +980,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
