--- a/EDA_12_market.ipynb
+++ b/EDA_12_market.ipynb
@@ -2912,11 +2912,11 @@
     "\n",
     "# 클러스터링\n",
     "kmeans = KMeans(n_clusters=3, random_state=42)\n",
-    "df_product['cluster'] = kmeans.fit_predict(X_scaled)\n",
+    "df_product['cluster'] = kmeans.fit_predict(X)\n",
     "\n",
     "# PCA로 2D 시각화\n",
     "pca = PCA(n_components=2)\n",
-    "X_pca = pca.fit_transform(X_scaled)\n",
+    "X_pca = pca.fit_transform(X)\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
     "\n",
