--- a/EDA_12_market.ipynb
+++ b/EDA_12_market.ipynb
@@ -2022,6 +2022,8 @@
     "    'std_total_price',\n",
     "    'std_shipping_charges',\n",
     "    'std_payment_installments',\n",
+    "    'std_marketing_info_agree',\n",
+    "    'std_age',\n",
     "    'std_review_score'\n",
     "]]\n",
     "\n",
