--- a/EDA_12_market.ipynb
+++ b/EDA_12_market.ipynb
@@ -3283,6 +3283,45 @@
   },
   {
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# payment_type category1 category2 gender country review_score marketing_info_agree agegroup\n",
+    "# 클러스터 라벨 붙여진 df_product 기준으로 병합\n",
+    "df_merged = marketing_delivered.copy()\n",
+    "df_merged['cluster'] = df_product['cluster'].values\n",
+    "\n",
+    "cols = [\n",
+    "    'category1', 'category2','agegroup'\n",
+    "]\n",
+    "\n",
+    "for col in cols:\n",
+    "    ct = pd.crosstab(df_merged['cluster'], df_merged[col], normalize='index')\n",
+    "    plt.figure(figsize=(15, 8))\n",
+    "    sns.heatmap(ct, annot=True, fmt=\".2f\", cmap='YlGnBu')\n",
+    "    plt.title(f'Cluster별 {col} 분포 비율')\n",
+    "    plt.ylabel('cluster')\n",
+    "    plt.xlabel(col)\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# for col in cols:\n",
+    "#     ct = pd.crosstab(df_merged['cluster'], df_merged[col])\n",
+    "#     plt.figure(figsize=(15, 8))\n",
+    "#     sns.heatmap(ct, annot=True, fmt=\"d\", cmap='Oranges')\n",
+    "#     plt.title(f'[절대값] Cluster별 {col} 분포')\n",
+    "#     plt.ylabel('cluster')\n",
+    "#     plt.xlabel(col)\n",
+    "#     plt.xticks(rotation=45)\n",
+    "#     plt.tight_layout()\n",
+    "#     plt.show()"
+   ],
+   "id": "6abb4dc228b74c2b"
+  },
+  {
+   "metadata": {},
    "cell_type": "markdown",
    "source": "# 4 혼합 클러스터",
    "id": "960d092d94b996fd"
